<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/racket_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/score_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreTextViewA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:paddingBottom="12dp"
                android:paddingTop="18dp"
                android:text="@string/starting_score"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="56sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/player_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/rounded_edges"
                android:onClick="pointPlayer1"
                android:text="@string/point"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/white">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/scoreTextViewB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:paddingBottom="12dp"
                android:paddingTop="18dp"
                android:text="@string/starting_score"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="56sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/player_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/rounded_edges"
                android:onClick="pointPlayer2"
                android:text="@string/point"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_counter"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/sets_won_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/sets_won"
            android:layout_toStartOf="@id/sets_won"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementSet1" />

        <TextView
            android:id="@+id/sets_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_edges"
            android:padding="8dp"
            android:text="Sets won"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sets_won"
            android:layout_toRightOf="@id/sets_won"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementSet2" />

        <TextView
            android:id="@+id/sets_won_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/faults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sets"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/faults_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/court_faults"
            android:layout_toStartOf="@id/court_faults"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementFault1" />

        <TextView
            android:id="@+id/court_faults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_edges"
            android:padding="8dp"
            android:text="Faults"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/court_faults"
            android:layout_toRightOf="@id/court_faults"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementFault2" />

        <TextView
            android:id="@+id/faults_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/faults"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/lets_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/court_lets"
            android:layout_toStartOf="@id/court_lets"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementLet1" />

        <TextView
            android:id="@+id/court_lets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_edges"
            android:padding="8dp"
            android:text="Lets"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/court_lets"
            android:layout_toRightOf="@id/court_lets"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementLet2" />

        <TextView
            android:id="@+id/lets_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/appeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lets"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/appeals_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/court_appeal"
            android:layout_toStartOf="@id/court_appeal"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementAppeal1" />

        <TextView
            android:id="@+id/court_appeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_edges"
            android:padding="8dp"
            android:text="Appeals"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/court_appeal"
            android:layout_toRightOf="@id/court_appeal"
            android:background="@drawable/ic_add_black"
            android:contentDescription="@string/addition_symbol"
            android:onClick="incrementAppeal2" />

        <TextView
            android:id="@+id/appeals_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appeals"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edges"
        android:onClick="reset"
        android:padding="8dp"
        android:text="@string/set_over"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>